# SmaugFUSS

./: Changelog  Makefile  Makefile.am.autogen-bak  README.md  TODO  configure.ac  kallaikia.servidor.configuracion  phantasienIII.servidor.completo  phantasienIII.servidor.configuracion  phantasienIII.servidor.desarrollo  phantasienIII.servidor.rapido
Documentacion/: FAQ.txt  Prog.help  SMAUGDOC  act.txt  area.txt  clan_ranks.txt  class.txt  command.txt  pfile.txt  skill.txt  smaugfuss_readme
Documentacion/MOBprogram/: mob_commands.c  mob_prog.c  mprog_add_to_db.c
Documentacion/hermandad-2.1/: README.1ST  changes.txt  guild.c~  guild.dat.readme  guild.dat~  hermandad.c  hermandad.datos  hermandad_donativos.c  install.txt
Documentacion/i3/: ACK.txt  Circle.txt  I3Install.txt  I3ember.txt  Merc.txt  Rom.txt  Smaug.txt  i3.c  i3.color.ack  i3.color.lope  i3.color.samson  i3.config  i3.h  i3.routers  i3cfg.h  i3packets.txt
clanes/: barbaros.clan  clanes.lista  clerigos.clan
clans/: _vampiros_.clan  agoreiros.clan  asasinos.clan  clans.lista  druidas.clan  guerreiros.clan  ladrons.clan  magos.clan
clases/: Adivino.clase  Asesino.clase  Barbaro.clase  Clerigo.clase  Druida.clase  Guerrero.clase  Ladron.clase  Mago.clase  _Vampiro_.clase  clases.lista
cor/: phantasienIII
db/area/: shutdown.txt
etc/: httpd.conf  httpd.conf.in  smaugd.conf.in
imc/: imc.quen
jugadores/a/: Admin
jugadores/b/: Burzumishi
o_reino_das_tebras/: ananos.zona  axuda.zona  brigantia.zona  capela.zona  escola_sanacion.zona  galeriamuseo.zona  grava.zona  zonas.lista
o_reino_das_tebras/zonas.antiguas/: Leeme_portar_zonas_antiguas.txt  abismo_destierro.zona  animalandia.zona  ciudad_anonopolis.zona  futuro.zona  hollywood.zona  llanuras.zona  mazmorra_la_trampa_mortal.zona  monte_maldito.zona  natacha_malathar.zona  pais_maravillas.zona  siete_lugares_benditos.zona  the_beatles.zona  villa_pinguino.zona  villa_verde.zona
po/: ChangeLog
razas/: razas.lista
realms_of_despair/: alice.are  reconstruir_lista_areas  zonas.lista
reino_de_la_desesperacion/: Construir.zona  aserradero.zona  ayuda.zona  curandero.zona  limbo.zona  midennir.zona  nueva_academia.zona  nuevo_portal.zona  planicie.zona  volar_dragones.zona  zonas.lista
reino_de_la_desesperacion/imc/: Whotemplates.txt
reino_de_la_desesperacion/zonas.antiguas/: bajo_oscuridad.zona  bosque_mirk.zona  ciudad_centro_anonopolis.zona  mazmorra.zona  monte_granfuego.zona  murallas_anonopolis.zona  prehistoria.zona  pueblo_fantasma.zona  pueblo_kender.zona
sistema/: comandos.datos  comandos.datos.orig  data.datos  dns.datos  fecha.datos  hermandad.datos  kallaikia_title.rip  mapaclima.datos  phantasienIIItitle.ans  phantasienIIItitle.asc  sistema.datos  watch.lista
src/: Makefile  Makefile.am  Makefile.am.autogen-bak  act_info.c  act_move.c  act_obj.c  act_wiz.c  actualizar.c  ajedrez.c  banear.c  build.c  calendario.c  calendario.h  clanes.c  clans.c  clima.c  clima.h  color.c  color.h  comentarios.c  comunicaciones.c  comunicacions.c  consejos.c  consejos.h  consellos.c  consellos.h  constantes.c  construir.c  convertir_mapas.c  cor.c  cor.h  crear_objetos.c  crear_obxetos.c  criaturas_comandos.c  criaturas_programas.c  db.c  deidades.c  deity.c  dns.c  especial.c  (+87 more)
taboeiros_de_anuncios/: taboeiros_de_anuncios.msg
xogadores/b/: Burzumishi
